[gd_scene load_steps=45 format=3 uid="uid://h017mwpcdc1e"]

[ext_resource type="Material" uid="uid://coy4nf1ts2u0q" path="res://assets/materials/grid_mat.tres" id="1_aup37"]
[ext_resource type="Script" path="res://ladder.gd" id="3_kdg1s"]
[ext_resource type="PackedScene" uid="uid://bouvidg64dqet" path="res://assets/models/ladder/CartoonLader/CartoonLadder.fbx" id="4_qdqii"]
[ext_resource type="PackedScene" uid="uid://b1b0nka3xayeg" path="res://bounce.tscn" id="5_ca51l"]
[ext_resource type="PackedScene" uid="uid://cy7y0irkl6w2r" path="res://spellManager/spell_pickup.tscn" id="5_gipfr"]
[ext_resource type="Script" path="res://water_area.gd" id="6_rmd8c"]
[ext_resource type="PackedScene" uid="uid://ckcqtdfka0v40" path="res://target_dummy/target_dummy.tscn" id="7_vo52k"]
[ext_resource type="Script" path="res://elevator.gd" id="8_0dlt5"]
[ext_resource type="Script" path="res://spellManager/spells/Blink/blink.gd" id="10_vn22s"]
[ext_resource type="Script" path="res://spellManager/spells/Sprint/sprint.gd" id="11_w0gtx"]
[ext_resource type="Script" path="res://spellManager/spells/TimeTravel/time_travel.gd" id="12_kkanx"]
[ext_resource type="PackedScene" uid="uid://deukppkq0x40j" path="res://assets/scenes/ship_large_2.tscn" id="13_prpo3"]
[ext_resource type="Script" path="res://ship_follow.gd" id="13_s4wdj"]
[ext_resource type="PackedScene" uid="uid://ck4vyygcpqi3b" path="res://NPCS/QuestGiver/quest_giver.tscn" id="15_0n2kh"]
[ext_resource type="PackedScene" uid="uid://du2d5wxly6byu" path="res://assets/scenes/gold_coin.tscn" id="15_xgh2i"]
[ext_resource type="Script" path="res://questManager/search_quest.gd" id="16_4amj3"]
[ext_resource type="Script" path="res://collect_coin_achievement.gd" id="16_c87p0"]
[ext_resource type="Script" path="res://questManager/target_dummy_quest.gd" id="17_apl3q"]
[ext_resource type="Resource" uid="uid://j22w3y71oya0" path="res://questManager/PirateCoinQuest.tres" id="18_pmxdd"]
[ext_resource type="PackedScene" uid="uid://bfrux4dt65r13" path="res://assets/models/rock2.fbx" id="21_7ic2p"]
[ext_resource type="PackedScene" uid="uid://da7sfaw8wlv0e" path="res://assets/models/Well.fbx" id="21_enjj1"]
[ext_resource type="PackedScene" uid="uid://c7v0482cqqwj2" path="res://NPCS/QuestGiver/help_threepwood_quest_chain.tscn" id="21_hg3nl"]
[ext_resource type="PackedScene" uid="uid://8lgbyrm1ew05" path="res://assets/models/rock1.fbx" id="22_v75mx"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_g1m0j"]

[sub_resource type="Sky" id="Sky_hn4vd"]
sky_material = SubResource("ProceduralSkyMaterial_g1m0j")

[sub_resource type="Environment" id="Environment_v8o6g"]
background_mode = 2
sky = SubResource("Sky_hn4vd")
ambient_light_source = 3
reflected_light_source = 2
tonemap_mode = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hl4yo"]
radius = 40.0

[sub_resource type="CylinderMesh" id="CylinderMesh_nj12g"]
top_radius = 40.0
height = 5.0

[sub_resource type="PrismMesh" id="PrismMesh_3f63d"]
material = ExtResource("1_aup37")
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_tmpsi"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_7mcia"]
size = Vector3(2, 6, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nq38v"]
transparency = 1
albedo_color = Color(0.392157, 0.588235, 0.392157, 0.392157)

[sub_resource type="BoxMesh" id="BoxMesh_whph5"]
material = SubResource("StandardMaterial3D_nq38v")
size = Vector3(2, 6, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_22c2b"]
size = Vector3(2, 14, 1)

[sub_resource type="BoxMesh" id="BoxMesh_aexy6"]
material = SubResource("StandardMaterial3D_nq38v")
size = Vector3(2, 14, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_c2hmr"]
size = Vector3(256, 10, 256)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3osiu"]
transparency = 1
cull_mode = 2
albedo_color = Color(0.180392, 0, 0.858824, 0.537255)

[sub_resource type="BoxMesh" id="BoxMesh_2p506"]
material = SubResource("StandardMaterial3D_3osiu")
size = Vector3(256, 10, 256)

[sub_resource type="Resource" id="Resource_ea36u"]
script = ExtResource("10_vn22s")
type = 1
projectile_type = 2
cooldown = 0.0
maxCharges = 1
isActivateSpell = false
name = ""
description = ""

[sub_resource type="Resource" id="Resource_yv8lr"]
script = ExtResource("11_w0gtx")
type = 1
projectile_type = 2
cooldown = 0.0
maxCharges = 1
isActivateSpell = false
name = ""
description = ""

[sub_resource type="Resource" id="Resource_lrbf8"]
script = ExtResource("12_kkanx")
type = 1
projectile_type = 2
cooldown = 60.0
maxCharges = 1
isActivateSpell = true
name = ""
description = ""

[sub_resource type="BoxShape3D" id="BoxShape3D_g6hs7"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxMesh" id="BoxMesh_t5rmj"]
size = Vector3(3, 1, 3)

[sub_resource type="Curve3D" id="Curve3D_j5op2"]
_data = {
"points": PackedVector3Array(24, 0, -24, -24, 0, 24, -29.9271, 0, 20.9995, -12.7966, 0, -3.05552, 12.7966, 0, 3.05552, -4.58566, 0, 58.6184, -13.6044, 0, 0.395721, 13.6044, 0, -0.395721, 43.5712, 0, 58.8808, -0.419403, 0, 23.4825, 0.419403, 0, -23.4825, 75.4143, 0, 18.6184, 18.7152, 0, -9.33589, -18.7152, 0, 9.33589, 43.6168, 0, -13.4313, 24, 0, -24, -24, 0, 24, -29.9271, 0, 20.9995),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="Environment" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v8o6g")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.422618, 0.640856, -0.640857, 0, 0.707107, 0.707106, 0.906308, -0.298836, 0.298836, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 1, 40)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("CylinderShape3D_hl4yo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0)
material_override = ExtResource("1_aup37")
mesh = SubResource("CylinderMesh_nj12g")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 1, 0)
material_override = ExtResource("1_aup37")
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 1, 41)
size = Vector3(8, 2, 10)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 46, 1, 39)
size = Vector3(4, 2, 6)

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 33, 1, 39)
size = Vector3(6, 2, 6)

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 2, 36)
size = Vector3(6, 4, 12)

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, 27)
size = Vector3(6, 6, 6)

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37, 3, 30)
size = Vector3(14, 6, 12)

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 44, 0, 42)
polygon = PackedVector2Array(0, 0, 0, 2, 6, 0)
depth = 4.0

[node name="CSGPolygon3D5" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(-0.440535, 0, -0.897736, 0, 1, 0, 0.897736, 0, -0.440535, 20.7028, -2, 74.9249)
polygon = PackedVector2Array(0, 0, 0, 2, 6, 0)
depth = 4.0

[node name="CSGPolygon3D4" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 36, 0, 42)
polygon = PackedVector2Array(0, 0, 0, 2, 6, 0)
depth = 4.0

[node name="CSGPolygon3D3" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 24, 4, 30)
polygon = PackedVector2Array(0, 0, 0, 2, 6, 0)
depth = 6.0

[node name="CSGPolygon3D2" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 2, 42)
polygon = PackedVector2Array(0, 0, 0, 2, 6, 0)
depth = 6.0

[node name="CSGMesh3D" type="CSGMesh3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, -8.74227e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 48, 5, 37)
mesh = SubResource("PrismMesh_3f63d")

[node name="CSGMesh3D2" type="CSGMesh3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, -8.74227e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 52, 9, 39)
mesh = SubResource("PrismMesh_3f63d")

[node name="CSGMesh3D3" type="CSGMesh3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, -8.74227e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 50, 7, 39)
mesh = SubResource("PrismMesh_3f63d")

[node name="CSGMesh3D5" type="CSGMesh3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, -8.74227e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 54, 11, 39)
mesh = SubResource("PrismMesh_3f63d")

[node name="CSGMesh3D6" type="CSGMesh3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, -8.74227e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 51, 13, 30)
mesh = SubResource("PrismMesh_3f63d")

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 5, 37)
script = ExtResource("8_0dlt5")
destination_height = 11.0

[node name="CSGMesh3D7" type="CSGMesh3D" parent="CSGCombiner3D/AnimatableBody3D"]
transform = Transform3D(-1, -8.74227e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PrismMesh_3f63d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/AnimatableBody3D"]
shape = SubResource("BoxShape3D_tmpsi")

[node name="CSGMesh3D4" type="CSGMesh3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, -8.74227e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 46, 3, 35)
mesh = SubResource("PrismMesh_3f63d")

[node name="Ladder" type="Area3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 44.5, 3, 25)
monitorable = false
script = ExtResource("3_kdg1s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/Ladder"]
shape = SubResource("BoxShape3D_7mcia")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CSGCombiner3D/Ladder"]
visible = false
mesh = SubResource("BoxMesh_whph5")

[node name="CartoonLadder" parent="CSGCombiner3D/Ladder" instance=ExtResource("4_qdqii")]
transform = Transform3D(2, 0, 0, 0, 2.95442, 0.347296, -7.10543e-15, -0.520944, 1.96962, 0, -2.4, 1.1)

[node name="Ladder2" type="Area3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37113e-08, 0, -0.999999, 0, 1, 0, 0.999999, 0, -4.37113e-08, 52.5, 7, 30)
monitorable = false
script = ExtResource("3_kdg1s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/Ladder2"]
shape = SubResource("BoxShape3D_22c2b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CSGCombiner3D/Ladder2"]
mesh = SubResource("BoxMesh_aexy6")

[node name="Ladder5" type="Area3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37113e-08, 0, 0.999999, 0, 1, 0, -0.999999, 0, -4.37113e-08, 49.5, 7, 30)
monitorable = false
script = ExtResource("3_kdg1s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/Ladder5"]
shape = SubResource("BoxShape3D_22c2b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CSGCombiner3D/Ladder5"]
mesh = SubResource("BoxMesh_aexy6")

[node name="Ladder3" type="Area3D" parent="CSGCombiner3D"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 51, 7, 28.5)
monitorable = false
script = ExtResource("3_kdg1s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/Ladder3"]
shape = SubResource("BoxShape3D_22c2b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CSGCombiner3D/Ladder3"]
mesh = SubResource("BoxMesh_aexy6")

[node name="Ladder4" type="Area3D" parent="CSGCombiner3D"]
transform = Transform3D(-0.999999, 0, 8.74227e-08, 0, 1, 0, -8.74227e-08, 0, -0.999999, 51, 7, 31.5)
monitorable = false
script = ExtResource("3_kdg1s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/Ladder4"]
shape = SubResource("BoxShape3D_22c2b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CSGCombiner3D/Ladder4"]
mesh = SubResource("BoxMesh_aexy6")

[node name="Bounce" parent="." instance=ExtResource("5_ca51l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.1, 0.5, 50.5)

[node name="WaterArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 128, -5, 128)
script = ExtResource("6_rmd8c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterArea"]
shape = SubResource("BoxShape3D_c2hmr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WaterArea"]
mesh = SubResource("BoxMesh_2p506")

[node name="TargetDummy" parent="." instance=ExtResource("7_vo52k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 2, 58.6)

[node name="Spells" type="Node3D" parent="."]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 35.3392, 7.59046, 35.1449)

[node name="Blink" parent="Spells" instance=ExtResource("5_gipfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
spell = SubResource("Resource_ea36u")

[node name="Sprint" parent="Spells" instance=ExtResource("5_gipfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
spell = SubResource("Resource_yv8lr")

[node name="TimeTravel" parent="Spells" instance=ExtResource("5_gipfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
spell = SubResource("Resource_lrbf8")

[node name="Elevator" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0.5, 22.5)
script = ExtResource("8_0dlt5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Elevator"]
shape = SubResource("BoxShape3D_g6hs7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Elevator"]
material_override = ExtResource("1_aup37")
mesh = SubResource("BoxMesh_t5rmj")

[node name="ShipPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37.9271, 0, 83.0005)
curve = SubResource("Curve3D_j5op2")

[node name="ShipFollow" type="PathFollow3D" parent="ShipPath"]
transform = Transform3D(0.707094, 0, -0.707094, 0, 1, 0, 0.707094, 0, 0.707094, -29.9271, 0, 20.9995)
progress = 302.223
use_model_front = true
script = ExtResource("13_s4wdj")

[node name="Ship" parent="ShipPath/ShipFollow" instance=ExtResource("13_prpo3")]

[node name="GoldCoin" parent="." instance=ExtResource("15_xgh2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 51, 16, 30)

[node name="Manbroom Fourpwood" parent="." instance=ExtResource("15_0n2kh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 8, 26)

[node name="Quest" type="Node" parent="Manbroom Fourpwood" node_paths=PackedStringArray("item_to_find")]
script = ExtResource("16_4amj3")
quest_information = ExtResource("18_pmxdd")
item_to_find = NodePath("../../GoldCoin")

[node name="Manbrush Twowood" parent="." instance=ExtResource("15_0n2kh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 8, 26)

[node name="Quest" type="Node" parent="Manbrush Twowood" node_paths=PackedStringArray("wanted_target")]
script = ExtResource("17_apl3q")
wanted_target = NodePath("../../TargetDummy")

[node name="CollectCoinAchievement" type="Node3D" parent="."]
script = ExtResource("16_c87p0")

[node name="Threepy Woody the Second" parent="." node_paths=PackedStringArray("kill_target", "pickup_coin") instance=ExtResource("21_hg3nl")]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 8.76237, 1, 51.4617)
kill_target = NodePath("../TargetDummy")
pickup_coin = NodePath("../GoldCoin")

[node name="Well_area" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 10.2302, 0.950022, 48.9665)

[node name="rock2" parent="Well_area" instance=ExtResource("21_7ic2p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.39552, 0.024989, 0.407124)

[node name="rock4" parent="Well_area" instance=ExtResource("21_7ic2p")]
transform = Transform3D(0.818651, 0, 0.574291, 0, 1, 0, -0.574291, 0, 0.818651, 0.980134, 0.024989, -0.887762)

[node name="rock5" parent="Well_area" instance=ExtResource("21_7ic2p")]
transform = Transform3D(0.373781, -0.00281819, 0.927513, 0.000806702, 0.999996, 0.00271334, -0.927517, -0.000265977, 0.373782, 0.395383, 0.024989, -1.10737)

[node name="rock7" parent="Well_area" instance=ExtResource("21_7ic2p")]
transform = Transform3D(0.968648, -0.000107306, -0.248438, 0.000806702, 0.999996, 0.00271334, 0.248436, -0.00282868, 0.968644, -0.762352, 0.0249892, -0.741854)

[node name="rock9" parent="Well_area" instance=ExtResource("21_7ic2p")]
transform = Transform3D(0.968648, -0.000107306, -0.248438, 0.000806702, 0.999996, 0.00271334, 0.248436, -0.00282868, 0.968644, -0.926531, 0.035719, 0.726437)

[node name="rock1" parent="Well_area" instance=ExtResource("22_v75mx")]
transform = Transform3D(0.644938, 0, -0.764235, 0, 1, 0, 0.764235, 0, 0.644938, 1.87588, 0.024989, 0.584951)

[node name="rock6" parent="Well_area" instance=ExtResource("22_v75mx")]
transform = Transform3D(-0.591943, 0, -0.80598, 0, 1, 0, 0.80598, 0, -0.591943, -0.318722, 0.024989, -1.15008)

[node name="rock8" parent="Well_area" instance=ExtResource("22_v75mx")]
transform = Transform3D(-0.999985, 0.00243135, -0.00488469, 0.00242589, 0.999997, 0.00112205, 0.00488737, 0.00111017, -0.999988, -1.24664, 0.0451208, -0.495068)

[node name="rock3" parent="Well_area" instance=ExtResource("22_v75mx")]
transform = Transform3D(-0.910467, 0, -0.413581, 0, 1, 0, 0.413581, 0, -0.910467, 1.64357, 0.024989, -0.148516)

[node name="Well" parent="Well_area" instance=ExtResource("21_enjj1")]

[connection signal="picked_up" from="GoldCoin" to="Manbroom Fourpwood" method="_on_gold_coin_picked_up"]
[connection signal="picked_up" from="GoldCoin" to="CollectCoinAchievement" method="_on_gold_coin_picked_up"]

[editable path="Manbroom Fourpwood"]
[editable path="Manbrush Twowood"]
